Changes in version 3.5 - Not yet released.
------------------------------------

Changes in version 3.4 - 27 Dec 2018.
------------------------------------

This version is an important version, with many internal rewrite and code cleaning. 

Lots of changes in the RrdBackendFactory. Much finer control is provided, a generic close method is provided and backend factories now implement Closeable. Accessing factories
using the name is deprecated, and active backend should be used instead.
Many final was also removed. People using their own backend should have a look at the new code.
Backends now use more of Java's NIO and ByteBuffer API.
RrdBerkleyDbBackendFactory was the only backend factory whose creator auto-register as default. That's not the case any more.

Both LinearInterpolator and elements colors (in RrdGraphDef.setColor) now uses an enum instead of int.

All exceptions thrown by RRD4J are now subclass of org.rrd4j.core.RrdException, for finer exception handling.
But RrdException is a subclass of IOException anyway, so this release will not brake existing code. It fixes https://github.com/rrd4j/rrd4j/issues/102.

Added OSGi metadata to the main rrd4j jar. This is not supported on jdk 1.7. Added in https://github.com/rrd4j/rrd4j/pull/120.

A finalize override was removed in RrdDb, as it's considered a bad practice and now uses PhantomReference instead. It should reduce GC time, feedback is welcome.

In NIO backend, the sync threads pool is now optional. It was never really useful as the operation system take care of that anyway.

Changes in version 3.3.1 - 5 Oct 2018
------------------------------------

A rebuild of 3.3. Since Java 9, it's dangerous to build pre-9 java without checking against the old runtime.

Changes in version 3.3 - 28 Sep 2018
------------------------------------

Updated NIO backend to work on java 9+.
A few update to code from sonarcloud recommendations.

Changes in version 3.2 - 11 Nov 2017
------------------------------------
